[gd_scene load_steps=5 format=3 uid="uid://c0frkhey15s0i"]

[ext_resource type="Script" path="res://TitleScreen.gd" id="1_t27x2"]
[ext_resource type="Theme" uid="uid://p3o3gvkgp2ib" path="res://Resources/PacmanGame_theme.tres" id="2_0og06"]
[ext_resource type="AudioStream" uid="uid://dp605mm5pya3i" path="res://Assets/Sounds/pacman_Intro.mp3" id="3_bphk8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b4ea6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t27x2")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 227.0
offset_top = 32.0
offset_right = 967.0
offset_bottom = 212.0
theme = ExtResource("2_0og06")
theme_override_colors/font_color = Color(1, 0.898039, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 8
theme_override_font_sizes/font_size = 200
text = "Pacman"

[node name="Label" type="Label" parent="Title"]
layout_mode = 0
offset_left = 133.0
offset_top = 166.0
offset_right = 578.0
offset_bottom = 256.0
theme_override_colors/font_color = Color(0.0235294, 0.258824, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 100
text = "in Godot"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Title"]
layout_mode = 0
offset_left = 305.0
offset_top = 352.0
offset_right = 429.0
offset_bottom = 396.0
theme = ExtResource("2_0og06")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Start"
flat = true

[node name="Get Ready Box" type="CenterContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 450.0
offset_top = 250.0
offset_right = 750.0
offset_bottom = 450.0

[node name="Panel" type="Panel" parent="Get Ready Box"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b4ea6")

[node name="GameLabel" type="Label" parent="Get Ready Box/Panel"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0og06")
text = "Get Ready"
vertical_alignment = 1

[node name="StartButtonFlashTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[node name="IntroThemePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bphk8")
volume_db = -10.0

[connection signal="pressed" from="Title/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="StartButtonFlashTimer" to="." method="_on_start_button_flash_timer_timeout"]
